--- a/exercises/exercises.tex
+++ b/exercises/exercises.tex
@@ -72,7 +72,7 @@ which will extract the exercises to the \texttt{ex/} directory. Change into the
 cd ex/
 git init
 git add .
-git commit -m `initial version'
+git commit -m "initial version"
 \end{verbatim}
 The Git commands will version control your code so you can see its revision history. Git will
 be covered in the second session. \\
@@ -156,7 +156,7 @@ If the command outputs difference, then the refactoring introduced a bug
 the changes by typing: 
 \begin{verbatim}
 git add fd1d_heat_explicit.f90
-git commit -m `refactored Fortran 77 into modern Fortran'
+git commit -m "refactored Fortran 77 into modern Fortran"
 \end{verbatim}
 \item[] The following exercises will further modularise the code. 
 \item Create a module \texttt{RHS\_mod} and put it in the file \texttt{RHS\_mod.f90} and put the 
@@ -192,22 +192,28 @@ another Git commit:
 \begin{verbatim}
 git add RHS_mod.f90 CFL_mod.f90 IO_mod.f90
 git add fd1d_heat_explicit.f90
-git commit -m `modularised RHS, CFL, IO and Solver'
+git commit -m "modularised RHS, CFL, IO and Solver"
 \end{verbatim}
 %
 \end{enumerate}
 \newpage
 \subsection*{Day Two Exercises}
 \begin{enumerate}
-\item Write a Makefile for the Fortran code produced on Day 1 in the same directory as the source
-code. After creating the Makefile, add it to git using \texttt{git add Makefile} 
+\item Write a Makefile for the Fortran code produced on Day one in the same directory as the source
+code. 
+\begin{enumerate}
+\item After creating your Makefile, type \texttt{make -n} to see what commands will be executed without executing
+your commands which is useful for debugging
+\item Then type \texttt{make} to build your code. 
+\item After creating the Makefile, add it to git using \texttt{git add Makefile}
+\end{enumerate}
 \item This task will cover Git in a bit more detail.
 \begin{enumerate}
 \item Type \texttt{git status} which will list the status of all the files. Notice that the object 
 files (\texttt{*.o}), Fortran module files (\texttt{*.mod}) and executable files (\texttt{*.exe}) are listed as 
 untracked files. These files need not be version controlled as they can be recreated
 \item Create the file \texttt{.gitignore} in the source code directory. This configuration file will 
-specify which files not not version control, e.g. object files, executable files or any file that can
+specify which files to not version control, e.g. object files, executable files or any file that can
 be recreated. Add the following extensions in the ignore file:
 \begin{verbatim}
 *.o
@@ -239,7 +245,7 @@ Extract static members of file & \texttt{EXTRACT\_STATIC = YES} \\ \hline
 List source code of file & \texttt{SOURCE\_BROWSER = YES} \\ \hline
 \end{tabular}
 \end{center}
-Then load the file \texttt{doxygen/html/index.html} in any browser to browse the source code documentation.
+Then load the file \texttt{doxygen/html/index.html} in any Web browser to browse the source code documentation.
 \begin{enumerate}
 \item Click on \texttt{Files} $\rightarrow$ \texttt{fd1d\_heat\_explicit.f90} which should display a call graph;
 \item Click on \texttt{Got to the source code of this file} to see the source code of the main program code;
@@ -286,6 +292,8 @@ should now see the module author, subroutine author and description. In addition
 dummy arguments with their description
 \item In your own time and after the workshop has ended do the same for the remaining module files 
 (\texttt{IO\_mod.f90}, \texttt{RHS\_mod.f90}, \texttt{Solver\_mod.f90}, \texttt{Types\_mod.f90})
+\item Type \texttt{git add fd1d\_heat\_explicit.f90 CFL\_mod.f90} to stage the changes and then 
+\texttt{git commit -m "added Doxygen tokens in source code"}
 \end{enumerate}
 \item sdf
 \end{enumerate}
